fixed overflow

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -265,7 +265,7 @@
 	}
 }
 
-@media screen and (max-width: 970px) {
+@media screen and (max-width: 1300px) {
 	.section {
 		padding: 8rem 2rem;
     	// overflow-y: scroll;
@@ -286,8 +286,13 @@
 			-ms-grid-row: 1;
 			grid-row: 1;
 			padding-right: 0rem !important;
+			text-align: center;
 			width: 90%;
 			margin: 0 auto;
+			p{
+				padding: 0;
+				line-height: 2.5rem;
+			}
 		}
 	}
 	.controls {
